--- a/Programmierung/OpenDataUtilities/.classpath
+++ b/Programmierung/OpenDataUtilities/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="zip4j_1.3.2.jar"/>
+	<classpathentry kind="lib" path="sqlite4java.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
