--- a/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="at.htlhallein.serverdatenbrille">
+    package="at.htlhallein.activitys">
 
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="at.htlhallein.activitys.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="at.htlhallein.activitys.SettingsActivity"
             android:label="@string/title_activity_settings"></activity>
     </application>
 
