--- a/Programmierung/ServerDatenbrille/app/build.gradle
+++ b/Programmierung/ServerDatenbrille/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.1.1'
+    buildToolsVersion "21.1.2"
     defaultConfig {
-        applicationId "at.htlhallein.serverdatenbrille"
-        minSdkVersion 21
-        targetSdkVersion 21
+        applicationId "htlhallein.at.serverdatenbrille"
+        minSdkVersion 15
+        targetSdkVersion 15
         versionCode 1
         versionName "1.0"
     }
@@ -18,13 +18,10 @@ android {
     }
     productFlavors {
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
-    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:support-v4:21.0.2'
 }
