--- a/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="at.htlhallein.activitys">
+    package="htlhallein.at.serverdatenbrille">
 
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:label="@string/app_name">
         <activity
-            android:name="at.htlhallein.activitys.MainActivity"
+            android:name="activity.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="at.htlhallein.activitys.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+            android:name="activity.SettingsActivity"
+            android:label="@string/settings"/>
     </application>
 
 </manifest>
