--- a/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="21"/>
+        android:targetSdkVersion="21" />
+
+    <uses-permission android:name="android.permission.access_wifi_state" />
+    <uses-permission android:name="android.permission.change_wifi_state" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +16,7 @@
         <activity
             android:name="activity.MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +24,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="activity.SettingsActivity"
-            android:label="@string/settings"
-            android:screenOrientation="portrait"/>
+            android:name="activity.QRCodeActivity"
+            android:label="@string/preferences_category_qrcode"
+            android:parentActivityName="activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="activity.MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
