--- a/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="25" />
 
-    <uses-permission android:name="android.permission.access_wifi_state" />
-    <uses-permission android:name="android.permission.change_wifi_state" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +25,7 @@
         </activity>
         <activity
             android:name="activity.QRCodeActivity"
-            android:label="@string/preferences_category_qrcode"
+            android:label="@string/qr_code_label"
             android:parentActivityName="activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
