--- a/Programmierung/ServerDatenbrille/app/build.gradle
+++ b/Programmierung/ServerDatenbrille/app/build.gradle
@@ -23,4 +23,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
