--- a/Programmierung/ClientDatenbrille/app/build.gradle
+++ b/Programmierung/ClientDatenbrille/app/build.gradle
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/Apache-SubnetUtils.jar')
+    compile 'org.apache.commons:commons-io:1.3.2'
 }
