--- a/Programmierung/ServerDatenbrille/app/build.gradle
+++ b/Programmierung/ServerDatenbrille/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.google.android.gms:play-services:6.5.87'
     
     // Supports Android 4.0.3 and later (API level 15)
     compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
