--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/AndroidManifest.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/AndroidManifest.xml
@@ -7,7 +7,11 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.NFC" />
-    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
