--- a/Programmierung/ServerDatenbrille_rewritten/app/build.gradle
+++ b/Programmierung/ServerDatenbrille_rewritten/app/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.google.android.gms:play-services:6.5.87'
 
     // JSON Library from Google
     compile 'com.google.code.gson:gson:2.3'
