--- a/Programmierung/ServerDatenbrille_rewritten/app/build.gradle
+++ b/Programmierung/ServerDatenbrille_rewritten/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'io.netty:netty-all:4.0.26.Final'
 
     // JSON Library from Google
     compile 'com.google.code.gson:gson:2.3'
