--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/AndroidManifest.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         android:name="android.hardware.nfc"
         android:required="true" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,13 +33,17 @@
         android:theme="@android:style/Theme.Holo.Light">
         <activity
             android:name="htlhallein.at.serverdatenbrille.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBOLVwhAjFs9TRcdOPcl8J65SNsGDepAsI"/>
     </application>
 
 </manifest>
