--- a/Programmierung/Optimiert/ClientDatenbrille/app/src/main/AndroidManifest.xml
+++ b/Programmierung/Optimiert/ClientDatenbrille/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="at.htlhallein.clientdatenbrille" >
+    package="at.htlhallein.clientdatenbrille" android:versionCode="7" android:versionName="1.3.3">
 
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
