--- a/Programmierung/ServerDatenbrille_rewritten/app/build.gradle
+++ b/Programmierung/ServerDatenbrille_rewritten/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "htlhallein.at.serverdatenbrille_rewritten"
+        applicationId "htlhallein.at.digitalsalzburg"
         minSdkVersion 17
         targetSdkVersion 21
         versionCode 1
@@ -29,7 +29,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'io.netty:netty-all:4.1.0.Beta3'
     compile 'org.jsoup:jsoup:1.8.1'
